--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,23 @@
-firebase-admin>=6.0.1
-pyttsx3==2.90
-SpeechRecognition==3.8.1
-pyaudio==0.2.13
-python-dotenv==1.0.0
-pvporcupine==1.9.5
-playsound==1.3.0
-python-dateutil==2.8.2
-tkinter==0.1.0
+firebase-admin>=6.0.1  # Firebase Admin SDK för hantering av autentisering, Firestore och Storage
+pyttsx3==2.90  # Bibliotek för text-till-tal-konvertering
+SpeechRecognition==3.8.1  # Känner igen tal med hjälp av olika API:er
+pyaudio==0.2.13  # Python-bindningar för PortAudio, används för ljudin- och utmatning
+python-dotenv==1.0.0  # Laddar miljövariabler från .env-fil
+pvporcupine==1.9.5  # Bibliotek för att upptäcka väckningsord
+playsound==1.3.0  # Enkelt bibliotek för att spela upp ljud
+python-dateutil==2.8.2  # Utökningar till standardmodulen datetime i Python
+tkinter==0.1.0  # GUI-verktyg för att bygga grafiska användargränssnitt
+numpy==1.24.2  # Grundläggande paket för numeriska beräkningar
+whisper==1.1.10  # OpenAI:s system för automatisk taligenkänning (ASR)
+sounddevice==0.4.5  # Tillhandahåller bindningar för PortAudio-biblioteket
+soundfile==0.11.0  # Läser och skriver ljudfiler
+scikit-learn==1.2.2  # Maskininlärningsbibliotek för Python
+flask==2.2.2  # Mikro-webbramverk för att bygga API:er och webbapplikationer
+requests==2.28.1  # HTTP-bibliotek för att göra förfrågningar
+matplotlib==3.5.2  # Bibliotek för att skapa statiska, animerade och interaktiva visualiseringar
+pandas==1.4.3  # Verktyg för dataanalys och manipulation
+jinja2==3.1.2  # Mallmotor för Python, används med Flask
+itsdangerous==2.1.2  # Tillhandahåller olika hjälpmedel för att överföra data till osäkra miljöer
+click==8.1.3  # Kit för att skapa kommandoradsgränssnitt
+werkzeug==2.2.2  # WSGI-verktygsbibliotek för Python-webbapplikationer
+setuptools==65.5.0  # Hjälper till med installation av Python-paket
