--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,23 @@ __pycache__/
 *.pyd
 
 # Logs
-*.log
+*.log# Python-kompileringsfiler
+__pycache__/
+*.pyc  # Python bytecode-filer
+*.pyo  # Optimerade Python-filer
+*.pyd  # Python dynamiska moduler
+
+# Loggfiler
+*.log  # Loggfiler genererade av programmet
+
+# Ljudfiler och stora filer
+*.wav  # Obehandlade ljudfiler
+*.mp3  # Komprimerade ljudfiler
+vosk-model-sv/  # Röstmodell som är för stor för att versionera
+
+# Miljöfiler
+.env  # Miljövariabler med känslig information
+
 
 # Audio & Large Files
 *.wav
