--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,27 +6,35 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && electron .\""
+    "preview": "vite preview",
+    "start": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && electron .\"",
+    "test": "vitest"
   },
   "dependencies": {
+    "@jest/globals": "^29.7.0",
     "firebase": "^11.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "concurrently": "^7.0.0",
     "electron": "^34.1.1",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "jsdom": "^26.0.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0",
-    "concurrently": "^7.0.0",
+    "vitest": "^3.0.5",
     "wait-on": "^6.0.0"
   }
 }
