--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,15 @@ jobs:
 
     - name: Run tests
       run: |
-        pytest
+        
+        
+    - name: Run flake8
+      run: |
+        pip install flake8
+        flake8 .
+
+    - name: Run mypy
+      run: |
+        pip install mypy
+        mypy Backend/src
+pytest
