--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ frontend/.env
 # Ignorera pycache-kataloger
 **/__pycache__/
 **/*.pyc
-.vs/
+# Ignorera node_modules i frontend och backend
+Backend/node_modules/
 
 # Ignorera känsliga nyckelfiler
 serviceAccountKey.json
