Add .env.example for environment config

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,26 @@
-# Backend environment variables
+# ✅ Serverinställningar
+PORT=5001
+FLASK_DEBUG=False
 
-# JWT configuration
-JWT_SECRET_KEY=your-jwt-secret
-JWT_REFRESH_SECRET_KEY=your-refresh-secret
+# 🔐 JWT-konfiguration
+JWT_SECRET_KEY=your_jwt_access_secret_key_here
+JWT_REFRESH_SECRET_KEY=your_jwt_refresh_secret_key_here
 JWT_EXPIRATION_MINUTES=15
 JWT_REFRESH_EXPIRATION_DAYS=360
 
-# Firebase configuration
-FIREBASE_WEB_API_KEY=your-web-api-key
-FIREBASE_CREDENTIALS=serviceAccountKey.json
-FIREBASE_API_KEY=your-client-api-key
-FIREBASE_PROJECT_ID=your-project-id
-FIREBASE_STORAGE_BUCKET=your-storage-bucket
-
-# Optional settings
-PORT=5001
-FLASK_DEBUG=False
+# 🌐 CORS (tillåtna ursprung)
 CORS_ALLOWED_ORIGINS=http://localhost:5000,https://www.lugntrygg.se
-FRONTEND_URL=https://www.lugntrygg.se
+
+# 🔥 Firebase Web API (för frontend-autentisering)
+FIREBASE_WEB_API_KEY=your_firebase_web_api_key_here
+
+# 🔥 Firebase Backend Credentials
+FIREBASE_API_KEY=your_firebase_api_key_here
+FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
+FIREBASE_PROJECT_ID=your_project_id
+FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
+FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
+FIREBASE_APP_ID=your_firebase_app_id
+
+# 🔐 Firebase Service Account (namn på JSON-filen)
+FIREBASE_CREDENTIALS=serviceAccountKey.json
