--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    env:  # ✅ Flyttad och rätt indenterad
+    env:
       JWT_SECRET_KEY: test
       JWT_REFRESH_SECRET_KEY: test
       FIREBASE_WEB_API_KEY: test
@@ -31,7 +31,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest
+        pip install pytest flake8 mypy
+
+    - name: Create dummy Firebase credentials file
+      run: echo "{}" > mock.json
 
     - name: Run tests
       run: |
@@ -39,10 +42,8 @@ jobs:
 
     - name: Run flake8
       run: |
-        pip install flake8
         flake8 .
 
     - name: Run mypy
       run: |
-        pip install mypy
         mypy Backend/src
