Add Docker optimizations, production configs, security, CI/CD

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -15,7 +15,10 @@ RUN apt-get update && apt-get install -y \
 # Copy requirements first for better caching
 COPY requirements.txt .
 
-# Install Python dependencies
+# Install torch separately for better caching (CPU-only version to reduce size)
+RUN pip install --no-cache-dir torch==2.8.0+cpu --index-url https://download.pytorch.org/whl/cpu
+
+# Install remaining Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
