--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -30,6 +30,12 @@ GOOGLE_APPLICATION_CREDENTIALS=google-credentials.json
 # 🤖 OpenAI API för AI-funktionalitet
 OPENAI_API_KEY=your-openai-api-key-here
 
+# 💳 Stripe Payment Configuration
+STRIPE_SECRET_KEY=sk_test_your-stripe-secret-key-here
+STRIPE_PUBLISHABLE_KEY=pk_test_your-stripe-publishable-key-here
+STRIPE_PRICE_ID=price_your-stripe-price-id-here
+STRIPE_WEBHOOK_SECRET=whsec_your-webhook-secret-here
+
 # ⚙️ App Configuration
 FLASK_DEBUG=False
 JWT_SECRET_KEY=your-jwt-secret
