--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -23,12 +23,15 @@ soundfile==0.11.0  # Ljudfilsbehandling
 openai>=1.0.0  # OpenAI API för avancerad AI-funktionalitet
 transformers>=4.0.0  # Hugging Face Transformers för emotion recognition
 librosa>=0.9.2 # Ljudanalysbibliotek
+scikit-learn>=1.3.0  # Machine learning bibliotek för prediktiv analys
 
 # 📌 Säkerhet och Rate Limiting
 flask-limiter>=3.0.0  # Rate limiting för Flask-API:er
 werkzeug>=3.0.0  # WSGI-verktyg för Flask-applikationer
 pycryptodome>=3.0.0  # Kryptering och dekryptering
+cryptography>=3.0.0  # Advanced encryption for HIPAA compliance
 redis>=4.0.0  # Redis för caching och sessionhantering
+stripe>=5.0.0  # Stripe betalnings-API för prenumerationer och in-app köp
 
 # 📌 Testning och Debugging
 pytest>=7.0.0  # Enhetstestning av backend och API
