--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,31 +6,30 @@
   "license": "MIT",
   "type": "module",
   "private": true,
-  "main": "main.js",
+  "main": "main.cjs",
   "homepage": "./",
   "proxy": "http://localhost:54112",
   "scripts": {
-    "dev": "npx vite",
-    "build": "vite build",
-    "build:electron": "electron-builder",
-    "preview": "vite preview",
+    "dev": "concurrently \"npx vite\" \"npx electron .\"",
+    "build": "next build",
+    "start": "next start",
     "lint": "eslint . --fix",
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit",
-    "test": "vitest",
-    "test:watch": "vitest --watch",
-    "test:coverage": "vitest --coverage",
-    "test:ui": "vitest --ui",
-    "start": "electron ."
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "axios": "^1.6.2",
     "chart.js": "^4.5.0",
+    "cloudinary": "^1.41.3",
     "crypto-js": "^4.2.0",
     "electron-store": "^9.0.0",
     "express-session": "^1.17.3",
     "firebase": "^10.11.1",
     "firebase-admin": "^11.10.0",
+    "framer-motion": "^12.23.24",
     "i18next": "^25.5.3",
     "i18next-browser-languagedetector": "^8.2.0",
     "js-cookie": "^3.0.5",
@@ -39,13 +38,13 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "msw": "^2.7.0",
+    "next": "^14.2.0",
     "punycode": "^2.3.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^16.0.0",
-    "react-router-dom": "^7.2.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
     "@cypress/code-coverage": "^3.14.6",
@@ -58,14 +57,14 @@
     "@types/js-cookie": "^3.0.6",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.17.20",
+    "@types/next": "^8.0.7",
     "@types/node": "^22.13.8",
     "@types/punycode": "^2.1.4",
     "@types/react": "^18.3.25",
     "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^8.25.0",
     "@typescript-eslint/parser": "^8.25.0",
-    "@vitejs/plugin-react": "^4.7.0",
-    "@vitest/ui": "^3.0.7",
+    "@vitejs/plugin-react": "^5.0.4",
     "concurrently": "^8.2.0",
     "cypress": "^15.3.0",
     "cypress-axe": "^1.7.0",
@@ -78,13 +77,12 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.23",
     "globals": "^16.4.0",
-    "jsdom": "^26.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.2.4",
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.45.0",
-    "vite": "^5.1.4",
-    "vitest": "^3.2.4",
-    "wait-on": "^7.2.0"
+    "vite": "^5.4.20"
   },
   "build": {
     "appId": "com.lugn.trygg",
