Complete production setup and feature enhancements

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -98,10 +98,7 @@
       "output": "release"
     },
     "files": [
-      "dist/**/*",
-      "package.json",
-      "main.cjs",
-      "preload.js"
+      "dist/**/*"
     ],
     "extraResources": [
       {
