--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,11 @@
     "build:desktop": "node ../build.js electron"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "axios": "^1.6.2",
     "chart.js": "^4.5.0",
     "cloudinary": "^1.41.3",
@@ -51,7 +56,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^16.0.0",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.2.0",
+    "vitest": "^3.2.4"
   },
   "devDependencies": {
     "@cypress/code-coverage": "^3.14.6",
