--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@mui/system": "^7.3.3",
     "@vitest/coverage-v8": "^3.2.4",
     "axios": "^1.6.2",
     "chart.js": "^4.5.0",
@@ -40,8 +41,8 @@
     "crypto-js": "^4.2.0",
     "electron-store": "^9.0.0",
     "express-session": "^1.17.3",
-    "firebase": "^10.11.1",
-    "firebase-admin": "^11.10.0",
+    "firebase": "^12.4.0",
+    "firebase-admin": "^13.5.0",
     "framer-motion": "^12.23.24",
     "i18next": "^25.5.3",
     "i18next-browser-languagedetector": "^8.2.0",
@@ -78,24 +79,27 @@
     "@typescript-eslint/eslint-plugin": "^8.25.0",
     "@typescript-eslint/parser": "^8.25.0",
     "@vitejs/plugin-react": "^5.0.4",
-    "concurrently": "^8.2.0",
+    "@vitejs/plugin-react-swc": "^4.1.0",
+    "concurrently": "^8.2.2",
     "cypress": "^15.3.0",
     "cypress-axe": "^1.7.0",
-    "electron": "^28.3.3",
+    "electron": "^38.2.2",
     "electron-builder": "^24.13.3",
     "electron-updater": "^6.3.9",
-    "eslint": "^8.57.1",
+    "eslint": "^9.37.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.23",
+    "glob": "^11.0.3",
     "globals": "^16.4.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.2.4",
+    "rimraf": "^6.0.1",
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.45.0",
-    "vite": "^5.4.20"
+    "vite": "^7.1.9"
   },
   "build": {
     "appId": "com.lugn.trygg",
