feat: Complete Lugn & Trygg production-ready improvements

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -16,4 +16,7 @@ VITE_ENCRYPTION_KEY=your-32-character-encryption-key-here
 # Andra miljövariabler (om det behövs)
 VITE_BACKEND_URL=http://localhost:5001
 
+# Google OAuth (för utveckling)
+VITE_GOOGLE_CLIENT_ID=your-google-client-id-here
+
 # Om du har fler miljövariabler kan du lägga till dem här...
