--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -45,4 +45,7 @@ JWT_REFRESH_EXPIRATION_DAYS=360
 DATABASE_URL=firestore://default
 FRONTEND_URL=https://your-frontend.com
 PORT=5001
-CORS_ALLOWED_ORIGINS=https://your-frontend.com
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,https://your-frontend.com
+
+# 🔐 Google OAuth Configuration
+GOOGLE_CLIENT_ID=your-google-oauth-client-id-here
