--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,9 @@
   "private": true,
   "main": "main.cjs",
   "homepage": "./",
-  "proxy": "http://localhost:54112",
+  "proxy": "http://localhost:5001",
   "scripts": {
-    "dev": "concurrently \"npx vite\" \"npx electron .\"",
+    "dev": "concurrently \"npx vite\" \"npx cross-env NODE_OPTIONS='--no-deprecation' npx electron .\"",
     "build": "npx vite build",
     "build:electron": "npm run build && electron-builder",
     "build:electron:win": "npm run build && electron-builder --win",
@@ -61,6 +61,10 @@
     "vitest": "^3.2.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "@babel/preset-typescript": "^7.26.0",
     "@cypress/code-coverage": "^3.14.6",
     "@electron/remote": "^2.1.2",
     "@eslint/js": "^9.37.0",
@@ -80,7 +84,9 @@
     "@typescript-eslint/parser": "^8.25.0",
     "@vitejs/plugin-react": "^5.0.4",
     "@vitejs/plugin-react-swc": "^4.1.0",
+    "babel-jest": "^29.7.0",
     "concurrently": "^8.2.2",
+    "cross-env": "^10.1.0",
     "cypress": "^15.3.0",
     "cypress-axe": "^1.7.0",
     "electron": "^38.2.2",
@@ -93,13 +99,15 @@
     "eslint-plugin-react-refresh": "^0.4.23",
     "glob": "^11.0.3",
     "globals": "^16.4.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.2.4",
     "rimraf": "^6.0.1",
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.9"
+    "vite": "^7.1.9",
+    "wait-on": "^9.0.1"
   },
   "build": {
     "appId": "com.lugn.trygg",
