--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^16.0.0",
     "react-router-dom": "^7.2.0",
+    "tailwindcss": "^3.4.0",
     "vitest": "^3.2.4"
   },
   "devDependencies": {
@@ -84,12 +85,13 @@
     "@typescript-eslint/parser": "^8.25.0",
     "@vitejs/plugin-react": "^5.0.4",
     "@vitejs/plugin-react-swc": "^4.1.0",
+    "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
     "concurrently": "^8.2.2",
     "cross-env": "^10.1.0",
     "cypress": "^15.3.0",
     "cypress-axe": "^1.7.0",
-    "electron": "^38.2.2",
+    "electron": "^38.3.0",
     "electron-builder": "^24.13.3",
     "electron-updater": "^6.3.9",
     "eslint": "^9.37.0",
@@ -102,6 +104,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.2.4",
     "rimraf": "^6.0.1",
     "typescript": "^5.2.2",
@@ -116,7 +119,8 @@
       "output": "release"
     },
     "files": [
-      "dist/**/*"
+      "dist/**/*",
+      "main.cjs"
     ],
     "extraResources": [
       {
