--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -26,13 +26,8 @@ flask-limiter>=3.7.0
 # Internationalization
 Flask-Babel>=4.0.0
 
-# Optional heavy packages (comment out if not needed):
-# numpy>=1.21.0
-# openai>=1.0.0
-# transformers>=4.30.0
-# scikit-learn>=1.3.0
-# pyttsx3>=2.90
-# SpeechRecognition>=3.10.0
-# google-cloud-speech>=2.0.0
-# librosa>=0.10.0
+# AI & Data Science packages
+numpy>=1.21.0
+scipy>=1.11.0
+scikit-learn>=1.3.0
 
