Add Vercel Speed Insights for performance monitoring

--- a/web-app/package.json
+++ b/web-app/package.json
@@ -37,6 +37,7 @@
     "@sentry/react": "^10.20.0",
     "@sentry/tracing": "^7.120.4",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "@vitest/coverage-v8": "^3.2.4",
     "amplitude-js": "^8.21.9",
     "axios": "^1.6.2",
