feat: Add Privacy Policy and Terms of Service for Google OAuth + Allow public/ in git

--- a/web-app/.gitignore
+++ b/web-app/.gitignore
@@ -136,7 +136,7 @@ dist
 
 # Gatsby files
 .cache/
-public
+# public  # Commented out - we need public/ for Vite
 
 # Vuepress build output
 .vuepress/dist
