--- a/web-app/package.json
+++ b/web-app/package.json
@@ -53,6 +53,7 @@
     "i18next": "^25.5.3",
     "i18next-browser-languagedetector": "^8.2.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.2",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
@@ -64,6 +65,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^16.0.0",
     "react-router-dom": "^7.2.0",
+    "recharts": "^2.15.0",
     "tailwindcss": "^3.4.0",
     "vitest": "^3.2.4"
   },
