--- a/render.yaml
+++ b/render.yaml
@@ -4,15 +4,15 @@ services:
     runtime: python
     pythonVersion: 3.11
     plan: free
-    
+
     repo: https://github.com/omar1u7777/Lugn-Trygg
     branch: main
-    
+
     rootDir: Backend
-    
+
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn -w 4 -b 0.0.0.0:$PORT main:app
-    
+
     envVars:
       - key: FLASK_ENV
         value: production
@@ -20,3 +20,5 @@ services:
         value: "False"
       - key: PYTHONUNBUFFERED
         value: "True"
+      - key: FIREBASE_STORAGE_BUCKET
+        value: lugn-trygg-53d75.appspot.com
