--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -53,5 +53,5 @@ APScheduler>=3.10.0
 psutil>=5.9.0
 bleach>=6.0.0
 apispec>=6.0.0
-marshmallow>=3.20.1,<4
+marshmallow>=3.20.1
 flask-apispec>=0.11.0
