--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -51,7 +51,8 @@ pydantic>=2.0.0
 cryptography>=41.0.0
 APScheduler>=3.10.0
 psutil>=5.9.0
+prometheus-client>=0.20.0
 bleach>=6.0.0
 apispec>=6.0.0
-marshmallow>=3.0.0
+marshmallow>=3.20.1,<4.0.0
 flask-apispec>=0.11.0
