--- a/web-app/vercel.json
+++ b/web-app/vercel.json
@@ -10,17 +10,26 @@
       }
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "https://api.lugntrygg.se/api/$1"
+      "source": "/api/:path*",
+      "destination": "https://api.lugntrygg.se/api/:path*"
     },
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/:path((?!api|_next|.*\\..*).*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
+    {
+      "source": "/static/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
     {
       "source": "/(.*)",
       "headers": [
@@ -38,33 +47,12 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://api.lugntrygg.se https://*.firebaseapp.com https://*.googleapis.com;"
-        }
-      ]
-    },
-    {
-      "source": "/static/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdnjs.cloudflare.com https://www.gstatic.com https://www.googleapis.com https://apis.google.com https://securetoken.googleapis.com https://firebase.googleapis.com https://*.firebaseapp.com https://*.googleapis.com https://www.googletagmanager.com https://googletagmanager.com https://region1.google-analytics.com https://unpkg.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://fonts.googleapis.com https://www.googletagmanager.com https://googletagmanager.com; img-src 'self' data: https: blob: https://www.googletagmanager.com https://googletagmanager.com https://storage.googleapis.com https://firebasestorage.googleapis.com; media-src 'self' https://storage.googleapis.com https://firebasestorage.googleapis.com; font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com; connect-src 'self' https://api.lugntrygg.se http://localhost:5001 http://127.0.0.1:5001 https://lugn-trygg-backend.onrender.com ws://localhost:3000 ws://localhost:3001 wss://localhost:3000 wss://localhost:3001 https://*.googleapis.com https://*.firebaseapp.com https://securetoken.googleapis.com https://firebase.googleapis.com https://identitytoolkit.googleapis.com wss://*.firebaseio.com https://*.firebaseio.com http://localhost:54112 http://127.0.0.1:54112 https://www.googletagmanager.com https://googletagmanager.com https://region1.google-analytics.com https://*.google-analytics.com; frame-src 'self' https://*.firebaseapp.com https://accounts.google.com; object-src 'none'; base-uri 'self'; form-action 'self';"
         }
       ]
     }
   ],
-  "functions": {
-    "src/pages/api/**/*.js": {
-      "runtime": "nodejs18.x"
-    }
-  },
-  "regions": ["fra1"],
-  "env": {
-    "VITE_API_URL": "https://api.lugntrygg.se",
-    "VITE_FIREBASE_API_KEY": "@vite-firebase-api-key",
-    "VITE_FIREBASE_AUTH_DOMAIN": "@vite-firebase-auth-domain",
-    "VITE_FIREBASE_PROJECT_ID": "@vite-firebase-project-id",
-    "VITE_FIREBASE_STORAGE_BUCKET": "@vite-firebase-storage-bucket",
-    "VITE_FIREBASE_MESSAGING_SENDER_ID": "@vite-firebase-messaging-sender-id",
-    "VITE_FIREBASE_APP_ID": "@vite-firebase-app-id"
-  }
+  "regions": [
+    "fra1"
+  ]
 }
