--- a/web-app/vercel.json
+++ b/web-app/vercel.json
@@ -10,61 +10,34 @@
       }
     }
   ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "https://api.lugntrygg.se/api/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ],
   "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "X-Frame-Options",
-          "value": "SAMEORIGIN"
-        },
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
-          "key": "Referrer-Policy",
-          "value": "strict-origin-when-cross-origin"
-        },
-        {
-          "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://api.lugntrygg.se https://*.firebaseapp.com https://*.googleapis.com;"
-        }
-      ]
-    },
     {
       "source": "/static/(.*)",
       "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+      ]
+    },
+    {
+      "source": "/(.*)",
+      "headers": [
+        { "key": "X-Frame-Options", "value": "SAMEORIGIN" },
+        { "key": "X-Content-Type-Options", "value": "nosniff" },
+        { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" }
       ]
     }
   ],
-  "functions": {
-    "src/pages/api/**/*.js": {
-      "runtime": "nodejs18.x"
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "https://api.lugntrygg.se/api/:path*"
+    },
+    {
+      "source": "/:path*",
+      "destination": "/index.html",
+      "missing": [
+        { "type": "file" }
+      ]
     }
-  },
-  "regions": ["fra1"],
-  "env": {
-    "VITE_API_URL": "https://api.lugntrygg.se",
-    "VITE_FIREBASE_API_KEY": "@vite-firebase-api-key",
-    "VITE_FIREBASE_AUTH_DOMAIN": "@vite-firebase-auth-domain",
-    "VITE_FIREBASE_PROJECT_ID": "@vite-firebase-project-id",
-    "VITE_FIREBASE_STORAGE_BUCKET": "@vite-firebase-storage-bucket",
-    "VITE_FIREBASE_MESSAGING_SENDER_ID": "@vite-firebase-messaging-sender-id",
-    "VITE_FIREBASE_APP_ID": "@vite-firebase-app-id"
-  }
+  ],
+  "regions": ["fra1"]
 }
