--- a/web-app/vercel.json
+++ b/web-app/vercel.json
@@ -10,19 +10,20 @@
       }
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/api/:path*",
-      "destination": "https://api.lugntrygg.se/api/:path*"
+      "src": "/api/(.*)",
+      "dest": "https://lugn-trygg-backend.onrender.com/api/$1"
     },
     {
-      "source": "/:path*",
-      "destination": "/index.html"
-    }
-  ],
-  "headers": [
+      "src": "/static/(.*)",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      },
+      "continue": true
+    },
     {
-      "source": "/(.*)",
+      "src": "/(.*)",
       "headers": [
         {
           "key": "X-Frame-Options",
@@ -38,23 +39,19 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://api.lugntrygg.se https://*.firebaseapp.com https://*.googleapis.com;"
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://lugn-trygg-backend.onrender.com https://*.firebaseapp.com https://*.googleapis.com;"
         }
-      ]
+      ],
+      "continue": true
     },
     {
-      "source": "/static/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ],
   "regions": ["fra1"],
   "env": {
-    "VITE_API_URL": "https://api.lugntrygg.se",
+    "VITE_API_URL": "https://lugn-trygg-backend.onrender.com",
     "VITE_FIREBASE_API_KEY": "@vite-firebase-api-key",
     "VITE_FIREBASE_AUTH_DOMAIN": "@vite-firebase-auth-domain",
     "VITE_FIREBASE_PROJECT_ID": "@vite-firebase-project-id",
