--- a/web-app/.vercel/project.json
+++ b/web-app/.vercel/project.json
@@ -1,1 +1,1 @@
-{"projectId":"prj_oNP1UfJZoK04FnLrUTDjpiiJ2Yjl","orgId":"team_SAdA3cc7eZZVUtJ6W9ktvWVJ","projectName":"web-app"}
+{"projectId":"prj_3PkVi1wbDJLAvGsjAtjRASWWVbWs","orgId":"team_SAdA3cc7eZZVUtJ6W9ktvWVJ","projectName":"lugn-trygg-web"}
