--- a/web-app/vercel.json
+++ b/web-app/vercel.json
@@ -40,11 +40,17 @@
   "regions": ["fra1"],
   "env": {
     "VITE_API_URL": "https://lugn-trygg-backend.onrender.com",
-    "VITE_FIREBASE_API_KEY": "@vite-firebase-api-key",
-    "VITE_FIREBASE_AUTH_DOMAIN": "@vite-firebase-auth-domain",
-    "VITE_FIREBASE_PROJECT_ID": "@vite-firebase-project-id",
-    "VITE_FIREBASE_STORAGE_BUCKET": "@vite-firebase-storage-bucket",
-    "VITE_FIREBASE_MESSAGING_SENDER_ID": "@vite-firebase-messaging-sender-id",
-    "VITE_FIREBASE_APP_ID": "@vite-firebase-app-id"
+    "VITE_FIREBASE_API_KEY": "@VITE_FIREBASE_API_KEY",
+    "VITE_FIREBASE_AUTH_DOMAIN": "@VITE_FIREBASE_AUTH_DOMAIN",
+    "VITE_FIREBASE_PROJECT_ID": "@VITE_FIREBASE_PROJECT_ID",
+    "VITE_FIREBASE_STORAGE_BUCKET": "@VITE_FIREBASE_STORAGE_BUCKET",
+    "VITE_FIREBASE_MESSAGING_SENDER_ID": "@VITE_FIREBASE_MESSAGING_SENDER_ID",
+    "VITE_FIREBASE_APP_ID": "@VITE_FIREBASE_APP_ID",
+    "VITE_GOOGLE_CLIENT_ID": "@VITE_GOOGLE_CLIENT_ID",
+    "VITE_CLOUDINARY_CLOUD_NAME": "@VITE_CLOUDINARY_CLOUD_NAME",
+    "VITE_CLOUDINARY_UPLOAD_PRESET": "@VITE_CLOUDINARY_UPLOAD_PRESET",
+    "VITE_CLOUDINARY_API_KEY": "@VITE_CLOUDINARY_API_KEY",
+    "VITE_CLOUDINARY_API_SECRET": "@VITE_CLOUDINARY_API_SECRET",
+    "VITE_BACKEND_URL": "@VITE_BACKEND_URL"
   }
 }
