--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,55 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "framework": "vite",
-  "installCommand": "npm install"
+  "version": 2,
+  "builds": [
+    {
+      "src": "web-app/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "web-app/dist"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "https://lugn-trygg-backend.onrender.com/api/$1"
+    },
+    {
+      "src": "/static/(.*)",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      },
+      "continue": true
+    },
+    {
+      "src": "/(.*)",
+      "headers": {
+        "X-Frame-Options": "SAMEORIGIN",
+        "X-Content-Type-Options": "nosniff",
+        "Referrer-Policy": "strict-origin-when-cross-origin",
+        "Content-Security-Policy": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://lugn-trygg-backend.onrender.com https://*.firebaseapp.com https://*.googleapis.com;"
+      },
+      "continue": true
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ],
+  "regions": ["fra1"],
+  "env": {
+    "VITE_API_URL": "https://lugn-trygg-backend.onrender.com",
+    "VITE_FIREBASE_API_KEY": "@VITE_FIREBASE_API_KEY",
+    "VITE_FIREBASE_AUTH_DOMAIN": "@VITE_FIREBASE_AUTH_DOMAIN",
+    "VITE_FIREBASE_PROJECT_ID": "@VITE_FIREBASE_PROJECT_ID",
+    "VITE_FIREBASE_STORAGE_BUCKET": "@VITE_FIREBASE_STORAGE_BUCKET",
+    "VITE_FIREBASE_MESSAGING_SENDER_ID": "@VITE_FIREBASE_MESSAGING_SENDER_ID",
+    "VITE_FIREBASE_APP_ID": "@VITE_FIREBASE_APP_ID",
+    "VITE_GOOGLE_CLIENT_ID": "@VITE_GOOGLE_CLIENT_ID",
+    "VITE_CLOUDINARY_CLOUD_NAME": "@VITE_CLOUDINARY_CLOUD_NAME",
+    "VITE_CLOUDINARY_UPLOAD_PRESET": "@VITE_CLOUDINARY_UPLOAD_PRESET",
+    "VITE_CLOUDINARY_API_KEY": "@VITE_CLOUDINARY_API_KEY",
+    "VITE_CLOUDINARY_API_SECRET": "@VITE_CLOUDINARY_API_SECRET",
+    "VITE_BACKEND_URL": "@VITE_BACKEND_URL"
+  }
 }
