--- a/vercel.json
+++ b/vercel.json
@@ -36,20 +36,5 @@
       "dest": "/index.html"
     }
   ],
-  "regions": ["fra1"],
-  "env": {
-    "VITE_API_URL": "https://lugn-trygg-backend.onrender.com",
-    "VITE_FIREBASE_API_KEY": "@VITE_FIREBASE_API_KEY",
-    "VITE_FIREBASE_AUTH_DOMAIN": "@VITE_FIREBASE_AUTH_DOMAIN",
-    "VITE_FIREBASE_PROJECT_ID": "@VITE_FIREBASE_PROJECT_ID",
-    "VITE_FIREBASE_STORAGE_BUCKET": "@VITE_FIREBASE_STORAGE_BUCKET",
-    "VITE_FIREBASE_MESSAGING_SENDER_ID": "@VITE_FIREBASE_MESSAGING_SENDER_ID",
-    "VITE_FIREBASE_APP_ID": "@VITE_FIREBASE_APP_ID",
-    "VITE_GOOGLE_CLIENT_ID": "@VITE_GOOGLE_CLIENT_ID",
-    "VITE_CLOUDINARY_CLOUD_NAME": "@VITE_CLOUDINARY_CLOUD_NAME",
-    "VITE_CLOUDINARY_UPLOAD_PRESET": "@VITE_CLOUDINARY_UPLOAD_PRESET",
-    "VITE_CLOUDINARY_API_KEY": "@VITE_CLOUDINARY_API_KEY",
-    "VITE_CLOUDINARY_API_SECRET": "@VITE_CLOUDINARY_API_SECRET",
-    "VITE_BACKEND_URL": "@VITE_BACKEND_URL"
-  }
+  "regions": ["fra1"]
 }
