Remove root vercel.json to use Vercel dashboard settings instead

--- a/web-app/.vercel/project.json
+++ b/web-app/.vercel/project.json
@@ -1,1 +1,1 @@
-{"projectId":"prj_3PkVi1wbDJLAvGsjAtjRASWWVbWs","orgId":"team_SAdA3cc7eZZVUtJ6W9ktvWVJ","projectName":"lugn-trygg-web"}
+{"projectId":"prj_Q8MKjUuWmuLgd5L3moQ25h1wYlhb","orgId":"team_SAdA3cc7eZZVUtJ6W9ktvWVJ","projectName":"lugn-trygg"}
