Fix build issues: downgrade vite to v5.4.21 and tailwindcss to v3.4.0 for compatibility, clean up package manager conflicts

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "name": "lugn-trygg-web",
   "builds": [
     {
-      "src": "package.json",
+      "src": "web-app/package.json",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist"
