--- a/web-app/package.json
+++ b/web-app/package.json
@@ -42,8 +42,10 @@
     "web-vitals": "^3.5.0"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.14.7",
     "@playwright/test": "^1.40.1",
     "@types/crypto-js": "^4.2.1",
+    "@types/cypress": "^0.1.6",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
@@ -52,6 +54,7 @@
     "@vitejs/plugin-react": "^4.7.0",
     "@vitest/ui": "^1.0.4",
     "autoprefixer": "^10.4.21",
+    "cypress": "^15.5.0",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
