--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "name": "lugn-trygg-web",
-  "buildCommand": "cd web-app && npm install && npm run build",
+  "buildCommand": "npm run build",
   "outputDirectory": "web-app/dist",
   "routes": [
     {
