Add explicit installCommand to vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "version": 2,
   "name": "lugn-trygg-web",
   "buildCommand": "npm run build",
+  "installCommand": "npm install",
   "outputDirectory": "web-app/dist",
   "rootDirectory": "web-app",
   "routes": [
