--- a/package.json
+++ b/package.json
@@ -1,10 +1,73 @@
 {
-  "name": "lugn-trygg-root",
+  "name": "lugn-trygg-webapp",
   "private": true,
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
-    "build": "cd web-app && npm install && npm run build",
-    "dev": "cd web-app && npm run dev",
-    "install-web": "cd web-app && npm install"
+    "dev": "vite",
+    "build": "npx vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "serve": "vite preview --host 0.0.0.0 --port 3000",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:visual": "playwright test visual-regression.spec.ts --project=visual-regression",
+    "test:visual:update": "node scripts/update-visual-baselines.js",
+    "playwright:install": "playwright install",
+    "type-check": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.18.0",
+    "@mui/material": "^5.14.20",
+    "@mui/x-charts": "^6.0.0-alpha.2",
+    "@sentry/react": "^7.80.1",
+    "@types/amplitude-js": "^8.16.5",
+    "@types/lodash": "^4.17.20",
+    "amplitude-js": "^8.21.9",
+    "axios": "^1.6.2",
+    "chart.js": "^4.4.0",
+    "crypto-js": "^4.2.0",
+    "firebase": "^10.7.1",
+    "framer-motion": "^10.16.16",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.548.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^16.1.6",
+    "react-router-dom": "^6.20.1",
+    "recharts": "^3.3.0",
+    "web-vitals": "^3.5.0"
+  },
+  "devDependencies": {
+    "@cypress/code-coverage": "^3.14.7",
+    "@playwright/test": "^1.40.1",
+    "@types/crypto-js": "^4.2.1",
+    "@types/cypress": "^0.1.6",
+    "@types/node": "^20.10.4",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@vitejs/plugin-react": "^4.7.0",
+    "@vitest/ui": "^1.0.4",
+    "autoprefixer": "^10.4.21",
+    "cypress": "^15.5.0",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "jsdom": "^23.0.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.9.3",
+    "vite": "^5.4.21",
+    "vitest": "^1.0.4"
   }
 }
