--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,7 @@
   "version": 2,
   "name": "lugn-trygg-web",
   "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
   "outputDirectory": "dist",
-  "rootDirectory": "web-app",
   "routes": [
     {
       "src": "/api/(.*)",
@@ -34,5 +31,19 @@
     }
   ],
   "regions": ["fra1"],
-  "env": {}
+  "env": {
+    "VITE_API_URL": "https://lugn-trygg-backend.onrender.com",
+    "VITE_FIREBASE_API_KEY": "AIzaSyAxs7Monr1bJaXmUecl8eICvDaDhUkCFYY",
+    "VITE_FIREBASE_AUTH_DOMAIN": "lugn-trygg-53d75.firebaseapp.com",
+    "VITE_FIREBASE_PROJECT_ID": "lugn-trygg-53d75",
+    "VITE_FIREBASE_STORAGE_BUCKET": "lugn-trygg-53d75.appspot.com",
+    "VITE_FIREBASE_MESSAGING_SENDER_ID": "412776932054",
+    "VITE_FIREBASE_APP_ID": "1:412776932054:web:7c4c72c93eb9b5c49fdaf0",
+    "VITE_GOOGLE_CLIENT_ID": "619308821427-tf09ut7iefgpev7dk1ge5mvt3griuu4s.apps.googleusercontent.com",
+    "VITE_CLOUDINARY_CLOUD_NAME": "lugn-trygg",
+    "VITE_CLOUDINARY_UPLOAD_PRESET": "optimized_images",
+    "VITE_CLOUDINARY_API_KEY": "your_cloudinary_api_key",
+    "VITE_CLOUDINARY_API_SECRET": "your_cloudinary_api_secret",
+    "VITE_BACKEND_URL": "https://lugn-trygg-backend.onrender.com"
+  }
 }
