Add framework specification to vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
   "name": "lugn-trygg-web",
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
+  "framework": "vite",
   "routes": [
     {
       "src": "/api/(.*)",
